<resources>
    <string name="app_name">BottleCap Collector</string>
    <string name="go_to_camera">Go to camera</string>
    <string name="take_picture">Take picture</string>
    <string name="app_name_logo">BOTTLE CAP COLLECTOR</string>
    <string name="check">CHECK CAP</string>
    <string name="view">GALLERY</string>
    <string name="does_picture_look_fine">DOES THE PICTURE LOOK FINE?</string>
    <string name="yes">YES</string>
    <string name="retry">RETRY</string>
    <string name="do_you_want_to_save_it">DO YOU WANT TO SAVE IT?</string>
    <string name="value_0_1">0-1</string>
    <string name="value_1_2">1-2</string>
    <string name="value_2_3">2-3</string>
    <string name="value_3_4">3-4</string>
    <string name="value_4_5">4-5</string>
    <string name="value_5_6">5-6</string>
    <string name="value_6_7">6-7</string>
    <string name="value_7_8">7-8</string>
    <string name="value_8_9">8-9</string>
    <string name="value_9_10">9-10</string>
    <string name="value_0">0</string>
    <string name="is_it_one_of_these">IS IT ONE OF THESE?</string>
    <string name="name">NAME:</string>
    <string name="type_name_here">Type name here...</string>
    <string name="save">SAVE</string>
    <string name="username">USERNAME</string>
    <string name="type_username_here">Type username here...</string>
    <string name="password">PASSWORD</string>
    <string name="type_password_here">Type password here...</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="logged">LOGGED</string>
    <string name="slash">/</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_really_want_to_delete_this_cap">Do you really want to delete this cap?</string>
    <string name="no">NO</string>
    <string name="creation_date">CREATION DATE</string>
    <string name="cancel">CANCEL</string>
    <string name="update">UPDATE</string>
    <string name="loading">Loading</string>
    <string name="loading_cap">Cap is loading...</string>
    <string name="loading_picture">Processing picture...</string>
    <string name="validating_picture">Validating picture...</string>
    <string name="saving_cap">Saving cap...</string>
    <string name="deleting_cap">Deleting cap...</string>
    <string name="logged_in">Logged in!</string>
    <string name="wrong_credentials">Wrong credentials!</string>
    <string name="failure">"Failure... "</string>
    <string name="inputs_empty">Inputs must not be empty</string>
    <string name="logging_in">Logging in..</string>
    <string name="logging_out">Logging out..</string>
    <string name="admin_override">Do you want to start application?</string>
    <string name="admin_access">Admin access entry</string>
    <string name="outside_of_working_hours">Application is currently outside working hours, it is not accessible between %1$S and %2$S</string>
    <string name="no_internet_access">Device does not have internet access, turn on your internet connection</string>
    <string name="hello_admin">Hello admin!</string>
    <string name="loading_gallery">Loading gallery...</string>
    <string name="menu_name">mBottleCapCollector</string>
    <string name="account">ACCOUNT</string>
    <string name="what_cap_are_you">WHAT CAP ARE YOU</string>
    <string name="too_many_attempts">Too many attempts</string>
    <string name="your_app_is_currently_blocked">Your app is currently blocked</string>
    <string name="you_must_grant_permissions">You must grant permissions to use camera</string>
    <string name="you">YOU</string>
    <string name="your_cap">YOUR CAP</string>
    <string name="share">SHARE</string>
    <string name="choose_share_method">Choose share method:</string>
    <string name="cap_was_not_found">Cap was not found</string>
    <string name="try_again">"Try again! "</string>
    <string name="successfully_updated_cap">Successfully updated cap</string>
    <string name="cap_with_id_was_not_found">Cap with ID %1$d was not found</string>
    <string name="action_not_allowed">You are not allowed to perform this action</string>
    <string name="unexpected_exception">"Unexpected exception: "</string>
    <string name="successfully_deleted_cap">Successfully deleted cap</string>
    <string name="exception_disc">Exception during removing from disc</string>
    <string name="login_key">login_key</string>
    <string name="authenticated_key">authenticated_key</string>
    <string name="logging_key">logging_key</string>
    <string name="locked_day_key">locked_day_key</string>
    <string name="password_key">password_key</string>
    <string name="desc">DESCRIPTION</string>
    <string name="string_arrow_up">↑</string>
    <string name="string_arrow_down">↓</string>
    <string name="processing">Processing...</string>
    <string name="rotate">ROTATE PREVIEW</string>
    <string name="rotate_key">rotate_key</string>
</resources>
