<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:weightSum="5"
    android:gravity="center">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1">
        <TextView
            android:id="@+id/textViewMenuName"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/menu_name"/>
    </TableRow>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/checkButton"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/colorMainLayout"
            android:text="@string/check" />
    </TableRow>


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1">
    <Button
        android:id="@+id/viewButton"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:background="@color/colorMainLayout"
        android:text="@string/view" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/whatCapAreYouButton"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/colorMainLayout"
            android:text="@string/what_cap_are_you" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="1">
    <Button
        android:id="@+id/adminButton"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:background="@color/colorMainLayout"
        android:text="@string/account" />
    </TableRow>
</TableLayout>