<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".ChoiceActivity">

    <TableRow android:layout_weight="4">

        <ImageView
            android:id="@+id/capImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />
    </TableRow>

    <TableRow
        android:layout_weight="2"
        android:gravity="center">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/does_picture_look_fine"
            android:textSize="25sp" />
    </TableRow>

    <TableRow
        android:layout_weight="1"
        android:weightSum="1">

        <LinearLayout
            android:id="@+id/firstLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonRetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorMainLayout"
                android:orientation="horizontal"
                android:text="@string/retry" />

            <Button
                android:id="@+id/buttonYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/colorMainLayout"
                android:orientation="horizontal"
                android:text="@string/yes" />
        </LinearLayout>
    </TableRow>


</TableLayout>